...
                Text(text = "CPU: 2 cores")
            }
            Row {
                Text(text = "OS: Debian GNU/Linux 12")
            }
            Row {
                Text(text = "Docker: Ready")
            }
        }
    }
}

@Composable
...
